responsivdan keyingi ozgartirishlar kiritildi

--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,8 @@
     <head>
         <title>myPortfolio</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="/myPortfolio/style.css">
-        <link rel="stylesheet" href="./contact.css">
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./css/contact.css">
         <meta name="viewport" content="widt=device-width, initial-scale=1">
     </head>
     <body>
@@ -14,12 +14,12 @@
                 <div class="container">
                 <div class="main-header__brand">
                     <a href="index.html">
-                        <img src="/myPortfolio/images/1152496600_photo_2021-12-03_18-17-06.png" alt="Logo">
+                        <img src="./images/1152496600_photo_2021-12-03_18-17-06.png" alt="Logo">
                     </a>
                 </div>
                 <nav class="main-navigation">
                     <ul class="main-navigation__items">
-                        <li class="main-navigation__item active">
+                        <li class="main-navigation__item">
                             <a href="index.html">Asosiy</a>
                         </li>
                         <li class="main-navigation__item">
@@ -40,7 +40,7 @@
                         <li class="main-navigation__item">
                             <a href="#">Sheriklar</a>
                         </li>
-                        <li class="main-navigation__item">
+                        <li class="main-navigation__item active">
                             <a href="./contact.html">Bog'lanish</a>
                         </li>
                     </ul>
@@ -74,7 +74,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer__brand">
-                    <img src="/myPortfolio/images/123132.png" alt="Logo">
+                    <img src="./images/123132.png" alt="Logo">
                 </div>
                 <nav class="footer-navigation">
                     <ul class="footer-navigation__items">
