--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>myPortfolio</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="/myPortfolio/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <meta name="viewport" content="widt=device-width, initial-scale=1">
     </head>
     <body>
@@ -13,7 +13,7 @@
                 <div class="container">
                 <div class="main-header__brand">
                     <a href="index.html">
-                        <img src="/myPortfolio/images/1152496600_photo_2021-12-03_18-17-06.png" alt="Logo">
+                        <img src="./images/1152496600_photo_2021-12-03_18-17-06.png" alt="Logo">
                     </a>
                 </div>
                 <nav class="main-navigation">
@@ -46,7 +46,7 @@
                 </nav>
               </div>
             </header>
-        <!-- /Header section-->
+        <!-- /Header section-->    
 
         <!-- Main section -->
         <div class="main-banner">
@@ -58,16 +58,16 @@
                 <h3 class="main-section__position to-uppercase">Junior Dasturchi</h3>
                 <div class="main-section__social__networks">
                     <a href="https://instagram.com/_sobirovnodir">
-                        <i class="fab fa-instagram fa-1x"></i>
+                        <i class="fab fa-instagram fa-1x" style="color: #833ab4;"></i>
                     </a>
                     <a href="https://t.me/NodirSobiroff">
-                        <i class="fab fa-telegram fa-1x"></i>
+                        <i class="fab fa-telegram fa-1x" style="color: #0088cc"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-twitter fa-1x"></i>
+                        <i class="fab fa-twitter fa-1x" style="color: #08a0e9;"></i>
                     </a>
                     <a href="#">
-                        <i class="fab fa-youtube fa-1x"></i>
+                        <i class="fab fa-youtube fa-1x" style="color: #F90716;"></i>
                     </a>
                 </div>
                 <button type="button" class="main-section__action to-uppercase button"> 
@@ -75,7 +75,7 @@
                 </button>
                 </div>
                 <div class="main-section__image">
-                    <img src="/myPortfolio/images/1152496600_photo_2021-12-03_20-39-24.png" alt="">
+                    <img src="./images/me.png" alt="My image">
                 </div>
             </section>
             <div class="clearfix"></div>
@@ -119,7 +119,7 @@
         <div class="container">
             <section id="about-me" class="about-me">
                 <div class="about-me__image">
-                    <img src="/myPortfolio/images/about-me.png" alt="">
+                    <img src="./images/about-me.png" alt="">
                 </div>
                 <div class="about-me__info">
                     <h5 class="section-subtitle">
@@ -154,7 +154,7 @@
                 </h2>
                 <div class="services__cards">
                     <div class="service-card">
-                        <img src="/myPortfolio/images/service-1.png" class="service-card__icon" alt="Service 1">
+                        <img src="./images/service-1.png" class="service-card__icon" alt="Service 1">
                         <h5 class="service-card__title">Veb dasturlash</h5>
                         <p class="service-card__description">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo possimus facilis nobis! Repellat?
@@ -165,7 +165,7 @@
                     </div>
     
                     <div class="service-card">
-                        <img src="/myPortfolio/images/service-2.png" class="service-card__icon" alt="Service 1">
+                        <img src="./images/service-2.png" class="service-card__icon" alt="Service 1">
                         <h5 class="service-card__title">Veb dasturlash</h5>
                         <p class="service-card__description">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo possimus facilis nobis! Repellat?
@@ -176,7 +176,7 @@
                     </div>
     
                     <div class="service-card">
-                        <img src="/myPortfolio/images/service-3.png" class="service-card__icon" alt="Service 1">
+                        <img src="./images/service-3.png" class="service-card__icon" alt="Service 1">
                         <h5 class="service-card__title">Veb dasturlash</h5>
                         <p class="service-card__description">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo possimus facilis nobis! Repellat?
@@ -204,11 +204,11 @@
                 <div class="client-items">
                     <div class="client-item">
                         <div class="client-item__image">
-                            <img src="/myPortfolio/images/person4.jpg" alt="">
+                            <img src="./images/1152496600_pexels-ayodeji-fatunla-8122241~2.png" alt="Client Photo">
                         </div>
                         <div class="clien-item__info">
                             <h3 class="client-item__name">
-                                Abdulloh Umarov
+                                John Doe
                             </h3>
                             <p class="client-item__position">
                                 Veb Designer and Illustrator
@@ -249,7 +249,7 @@
                 </ul>
                 <div class="portfolio-items">
                     <div class="portfolio-item portfolio-item-1">
-                        <img src="/myPortfolio/images/portfolio-1.jpg" alt="portfolio image 1" class="portfolio-item__image">
+                        <img src="./images/portfolio-1.jpg" alt="portfolio image 1" class="portfolio-item__image">
                         <div class="portfolio-item__overlay"></div>
                             <div class="portfolio-item__info">
                                 <h4>
@@ -262,7 +262,7 @@
                     </div>
 
                     <div class="portfolio-item portfolio-item__2">
-                        <img src="/myPortfolio/images/portfolio-2.jpg" alt="portfolio image 2" class="portfolio-item__image">
+                        <img src="./images/portfolio-2.jpg" alt="portfolio image 2" class="portfolio-item__image">
                         <div class="portfolio-item__overlay"></div>
                             <div class="portfolio-item__info">
                                 <h4>
@@ -275,7 +275,7 @@
                     </div>
 
                     <div class="portfolio-item portfolio-item__3">
-                        <img src="/myPortfolio/images/portfolio-3.jpg" alt="portfolio image 3" class="portfolio-item__image">
+                        <img src="./images/portfolio-3.jpg" alt="portfolio image 3" class="portfolio-item__image">
                         <div class="portfolio-item__overlay"></div>
                             <div class="portfolio-item__info">
                                 <h4>
@@ -304,7 +304,7 @@
                 <div class="blog-items">
                     <div class="blog-item">
                         <div class="blog-item__image">
-                            <img src="/myPortfolio/images/blog-1.jpg" alt="blog 1 image">
+                            <img src="./images/blog-1.jpg" alt="blog 1 image">
                         </div>
                         <div class="blog-item__info">
                             <div class="blog-item__main__info">
@@ -331,7 +331,7 @@
 
                     <div class="blog-item">
                         <div class="blog-item__image">
-                            <img src="/myPortfolio/images/blog-2.jpg" alt="blog 1 image">
+                            <img src="./images/blog-2.jpg" alt="blog 1 image">
                         </div>
                         <div class="blog-item__info">
                             <div class="blog-item__main__info">
@@ -358,7 +358,7 @@
 
                     <div class="blog-item">
                         <div class="blog-item__image">
-                            <img src="/myPortfolio/images/blog-3.jpg" alt="blog 1 image">
+                            <img src="./images/blog-3.jpg" alt="blog 1 image">
                         </div>
                         <div class="blog-item__info">
                             <div class="blog-item__main__info">
@@ -391,23 +391,23 @@
         <div class="container">
             <section id="partners" class="partners"> 
                 <div class="partner">
-                    <img src="/myPortfolio/images/partner-1.png" alt="partner-1">
+                    <img src="./images/partner-1.png" alt="partner-1">
                 </div>
 
                 <div class="partner">
-                    <img src="/myPortfolio/images/partner-2.png" alt="partner-1">
+                    <img src="./images/partner-2.png" alt="partner-2">
                 </div>
 
                 <div class="partner">
-                    <img src="/myPortfolio/images/partner-3.png" alt="partner-1">
+                    <img src="./images/partner-3.png" alt="partner-3">
                 </div>
 
                 <div class="partner">
-                    <img src="/myPortfolio/images/partner-4.png" alt="partner-1">
+                    <img src="./images/partner-4.png" alt="partner-4">
                 </div>
 
                 <div class="partner">
-                    <img src="/myPortfolio/images/partner-5.png" alt="partner-1">
+                    <img src="./images/partner-5.png" alt="partner-5">
                 </div>
             </section>
         </div>
@@ -417,7 +417,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer__brand">
-                    <img src="/myPortfolio/images/123132.png" alt="Logo">
+                    <img src="./images/123132.png" alt="Logo">
                 </div>
                 <nav class="footer-navigation">
                     <ul class="footer-navigation__items">
